--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             </ul>
         </nav>
     </header>
+      
+    <section id="hero-section"></section>
     
-    <div class="hero"></div>
-   
     <section>
         <article id="search-engine-optimization">
             <img src="./images/search-engine-optimization.jpg" alt="journal with good examples of SEO" class="float-left">
