--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css">
-    <title>Horiseon</title>
+    <title>Horiseon | Online Management</title>
 </head>
 
 <body>
@@ -19,8 +19,8 @@
         </nav>
     </header>
       
-    <section id="hero-section"></section>
-    
+    <section id="hero-image"></section>
+
     <section>
         <article id="search-engine-optimization">
             <img src="./images/search-engine-optimization.jpg" alt="journal with good examples of SEO" class="float-left">
